--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,3 +2,4 @@ username = root
 password = root
 url = jdbc:mysql://localhost:3306/waydb?useSSL=false
 driver = com.mysql.jdbc.Driver
+ndb.password = 1234
