--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 username = root
-password = root
+password = 1234
 url = jdbc:mysql://localhost:3306/waydb?useSSL=false
 driver = com.mysql.jdbc.Driver
 ndb.password = 1234
