resolving troubles with dao, services, mappers, properties, adding sql-files od db

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 username = root
-password = 1234
+password = root
 url = jdbc:mysql://localhost:3306/waydb?useSSL=false
 driver = com.mysql.jdbc.Driver
 ndb.password = 1234
